# clite

./: .clang-format  .editorconfig  .gitignore  CMakeList.txt  CONCEPT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  meson.build  meson.options
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
cmake/: CliteCompilerFlags.cmake  CliteConfig.cmake.in  clite.pc.in
samples/: CMakeList.txt
tests/: CMakeList.txt
